--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <body>
     <script>
 
+
+
+      // need three pages, notes, archived, notes create
+
     const API = 'https://acme-users-api-rev.herokuapp.com/api';
 
     const fetchUser = async ()=> {
