--- a/index.html
+++ b/index.html
@@ -15,11 +15,25 @@
     </style>
   </head>
   <body>
-    <script>
+      <div id="root"></div>
+      <script type="text/babel">
+        const { HashRouter, Route, NavLink, Switch, Redirect } = ReactRouterDOM;
+
+        class APP extends React.Component{
+          constructor(){
+            super();
+            this.state = {
+              notes: [],
+              user: {}
+            };
+          }
+        async componentDidMount(){
+          const user= await fetchUser();
+          const notes = (await axios.get( `https://acme-users-api-rev.herokuapp.com/api/users/{ user.id }/notes`) )
+        }
 
 
-
-      // need three pages, notes, archived, notes create
+        }
 
     const API = 'https://acme-users-api-rev.herokuapp.com/api';
 
@@ -39,7 +53,7 @@
       storage.setItem('userId', user.id);
       return  user;
     };
-
+    render(<App />, root);
     </script>
   </body>
 </html>
