--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.0.1/react-router-dom.js"></script>
     <style>
-    nav {
-      display: flex;
-      justify-content: space-around;
-    }
+      nav {
+        display: flex;
+        justify-content: space-around;
+      }
 
-    .active {
-      background-color: dodgerblue;
-      color: white;
-    }
-
+      .active {
+        background-color: dodgerblue;
+        color: white;
+      }
     </style>
   </head>
   <body>
@@ -48,27 +47,26 @@
 
       const Nav = () => {
         return (
-        <nav>
-          <NavLink to='/notes/unarchived'>Notes</NavLink>
-          <NavLink to='/notes/archived'>Archived</NavLink>
-          <NavLink to='/notes/create'>Create</NavLink>
-        </nav>
+          <nav>
+            <NavLink to="/notes/unarchived">Notes</NavLink>
+            <NavLink to="/notes/archived">Archived</NavLink>
+            <NavLink to="/notes/create">Create</NavLink>
+          </nav>
         );
       };
 
-      const Notes = ({ notes }) =>{
-        const unArchived = notes.filter(note => (note.archived === false))
-        console.log(unArchived);
-        return(
+      const Notes = ({ notes }) => {
+        const unArchived = notes.filter(note => note.archived === false);
+        return (
           <div>
-          <ul>
-          {
-            unArchived.map( note => <li key={ note.id }>{ note.text }</li>)
-          }
-          </ul>
+            <ul>
+              {unArchived.map(note => (
+                <li key={note.id}>{note.text}</li>
+              ))}
+            </ul>
           </div>
         );
-        };
+      };
 
       class App extends React.Component {
         constructor() {
@@ -89,11 +87,13 @@
           const { user, notes } = this.state;
           return (
             <HashRouter>
-              <Route render={ ()=> <Nav notes={ notes } /> } />
-             <h2>Acme Note Taker for { user.fullName } </h2>
+              <Route render={() => <Nav notes={notes} />} />
+              <h2>Acme Note Taker for {user.fullName} </h2>
 
-                <Route path= '/notes/:archived' render = { () => <Notes notes = {notes} /> } />
-
+              <Route
+                path="/notes/:archived"
+                render={() => <Notes notes={notes} />}
+              />
             </HashRouter>
           );
         }
@@ -103,3 +103,10 @@
     </script>
   </body>
 </html>
+
+
+
+<!-- axios.post(/api/users/:userId/notes,{
+
+} )
+   -->
